--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -65,7 +65,7 @@ disable_top_img: false
 #default_top_img: https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683035808.9kgb1pxbrn.jpg
 
 # The banner image of index page
-index_img: https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/1739683035808.9kgb1pxbrn.jpg
+index_img: https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/sex/wallhaven-6dv6xq_2560x1440.45t68v81i.png
 
 # The banner image of archive page
 archive_img:
