--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,15 +26,14 @@ jobs:
             ${{ runner.OS }}-npm-
 
       - name: Install Dependencies
-        run: npm ci # 更严格的依赖安装（推荐使用 npm ci 替代 npm install）
+        run: npm ci
 
       - name: Build
         run: npm run build
 
       - name: Fix SPA Routing (Optional)
-        run: |
-          cp public/index.html public/404.html  # 处理 SPA 路由问题
-        if: success() # 仅在构建成功后执行
+        run: cp public/index.html public/404.html
+        if: success()
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
@@ -51,89 +50,90 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
+      # 步骤1：部署到 GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
+        uses: actions/deploy-pages@v4
+
+      # 步骤2：生成时间戳（新增独立步骤）
       - name: Generate Timestamp
         id: time
         run: |
           DEPLOY_TIME=$(date '+%Y-%m-%d %H:%M:%S')
           echo "DEPLOY_TIME=$DEPLOY_TIME" >> $GITHUB_OUTPUT
-        uses: actions/deploy-pages@v4
+
+      # 步骤3：发送邮件通知（修正缩进和参数）
       - name: Send Email Notification
         uses: dawidd6/action-send-mail@v3
+        if: success()
         with:
-    # ...SMTP配置...
+          # SMTP 配置（需在仓库 Secrets 中设置）
+          server_address: ${{ secrets.SMTP_HOST }}
+          server_port: ${{ secrets.SMTP_PORT }}
+          username: ${{ secrets.SMTP_USER }}
+          password: ${{ secrets.SMTP_PASS }}
+          # 邮件内容
           subject: "🎉 GitHub Pages 部署成功！"
+          to: 2383032306@qq.com, dsk306173@outlook.com
+          from: ${{ secrets.SMTP_USER }}
+          content_type: "text/html"
           body: |
-              <html>
-              <head>
+            <html>
+            <head>
               <style>
                 .container { max-width: 600px; margin: 20px auto; font-family: Arial, sans-serif; }
                 .header { 
-                background: linear-gradient(135deg, #4CAF50, #45a049); 
-                color: white; 
-                padding: 20px; 
-                border-radius: 10px 10px 0 0;
-                text-align: center;
-              }
-              .content { 
-              padding: 25px; 
-              background: #f8f9fa; 
-              border-radius: 0 0 10px 10px; 
-              border: 1px solid #e9ecef;
-              }
-              .button {
-              display: inline-block;
-              padding: 12px 25px;
-              background: #4CAF50;
-              color: white !important;
-              text-decoration: none;
-              border-radius: 5px;
-              margin: 15px 0;
-              }
-              .details { 
-              margin-top: 20px; 
-              color: #6c757d;
-              }
-              .footer { 
-              margin-top: 25px; 
-              text-align: center; 
-              color: #868e96;
-              }
+                  background: linear-gradient(135deg, #4CAF50, #45a049); 
+                  color: white; 
+                  padding: 20px; 
+                  border-radius: 10px 10px 0 0;
+                  text-align: center;
+                }
+                .content { 
+                  padding: 25px; 
+                  background: #f8f9fa; 
+                  border-radius: 0 0 10px 10px; 
+                  border: 1px solid #e9ecef;
+                }
+                .button {
+                  display: inline-block;
+                  padding: 12px 25px;
+                  background: #4CAF50;
+                  color: white !important;
+                  text-decoration: none;
+                  border-radius: 5px;
+                  margin: 15px 0;
+                }
+                .details { 
+                  margin-top: 20px; 
+                  color: #6c757d;
+                }
+                .footer { 
+                  margin-top: 25px; 
+                  text-align: center; 
+                  color: #868e96;
+                }
               </style>
-              </head>
-              <body>
+            </head>
+            <body>
               <div class="container">
-              <div class="header">
-              <h1>🚀 部署成功！</h1>
+                <div class="header">
+                  <h1>🚀 部署成功！</h1>
+                </div>
+                <div class="content">
+                  <p>您的网站已通过 GitHub Actions 自动部署完成</p>
+                  <a href="${{ steps.deployment.outputs.page_url }}" class="button">点击访问网站</a>
+                  <div class="details">
+                    <p><strong>📅 部署时间：</strong>${{ steps.time.outputs.DEPLOY_TIME }}</p>
+                    <p><strong>🔗 仓库地址：</strong>
+                      <a href="${{ github.server_url }}/${{ github.repository }}">${{ github.repository }}</a>
+                    </p>
+                    <p><strong>📝 最近提交：</strong><br>${{ github.event.head_commit.message }}</p>
+                  </div>
+                  <div class="footer">
+                    <small>本邮件由 GitHub Actions 自动发送，请勿直接回复</small>
+                  </div>
+                </div>
               </div>
-              <div class="content">
-              <p>您的网站已通过 GitHub Actions 自动部署完成</p>
-            
-              <a href="${{ steps.deployment.outputs.page_url }}" class="button">
-              点击访问网站
-              </a>
-
-              <div class="details">
-                <p><strong>📅 部署时间：</strong>${{ steps.time.outputs.DEPLOY_TIME }}</p>
-                <p><strong>🔗 仓库地址：</strong>
-                  <a href="${{ github.server_url }}/${{ github.repository }}">
-                    ${{ github.repository }}
-                  </a>
-                </p>
-                <p><strong>📝 最近提交：</strong><br>
-                  ${{ github.event.head_commit.message }}
-                </p>
-              </div>
-
-              <div class="footer">
-                <small>本邮件由 GitHub Actions 自动发送，请勿直接回复</small>
-              </div>
-              </div>
-              </div>
-              </body>
-              </html>
-          content_type: "text/html"
-          to: 2383032306@qq.com, dsk306173@outlook.com  # 替换为你要接收通知的邮箱
-          from: ${{ secrets.SMTP_USER }}  # 发件人（需与SMTP_USER一致
-        if: success()  # 仅在部署成功时发送
+            </body>
+            </html>
