--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hexo-renderer-pug": "^3.0.0",
     "hexo-renderer-stylus": "^3.0.1",
     "hexo-server": "^3.0.0",
+    "hexo-tag-img": "^1.0.2",
     "hexo-theme-landscape": "^1.0.0"
   }
 }
