--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
     "version": "7.3.0"
   },
   "dependencies": {
+    "cache-hash": "^1.0.0-beta.11",
     "hexo": "^7.3.0",
+    "hexo-blog-encrypt": "^3.1.9",
+    "hexo-butterfly-charts": "^1.1.6",
+    "hexo-daily-news": "^1.0.1",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-index": "^4.0.0",
+    "hexo-generator-search": "^2.4.3",
     "hexo-generator-tag": "^2.0.0",
+    "hexo-hash": "^1.0.4",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^7.0.0",
     "hexo-renderer-pug": "^3.0.0",
